[project]
name = "demo-evil-Flask"
version = "3.0.0.dev"
description = "An evil version of a simple framework for building complex web applications, created to demo software supply chain vulnerabilities."
readme = "README.rst"
license = {file = "LICENSE.rst"}
maintainers = [{name = "Toby Murray", email = "toby.murray@unimelb.edu.au"}]
requires-python = ">=3.8"
dependencies = [
    "Werkzeug>=2.3.7",
    "Jinja2>=3.1.2",
    "demo-evil-itsdangerous>=2.1.2",
    "click>=8.1.3",
    "blinker>=1.6.2",
    "importlib-metadata>=3.6.0; python_version < '3.10'",
]

[project.optional-dependencies]
async = ["asgiref>=3.2"]
dotenv = ["python-dotenv"]

[project.scripts]
flask = "flask.cli:main"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask"

[tool.flit.sdist]
include = [
    "docs/",
    "examples/",
    "requirements/",
    "tests/",
    "CHANGES.rst",
    "CONTRIBUTING.rst",
    "tox.ini",
]
exclude = [
    "docs/_build/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["flask", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.mypy]
python_version = "3.8"
files = ["src/flask"]
show_error_codes = true
pretty = true
#strict = true
allow_redefinition = true
disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
no_implicit_optional = true
local_partial_types = true
#no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
#warn_return_any = true
#warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "asgiref.*",
    "dotenv.*",
    "cryptography.*",
    "importlib_metadata",
]
ignore_missing_imports = true
